# finos

./: .gitignore  README.md  config.py  pyproject.toml
agent/: classifier.py  insights.py  llm.py  orchestrator.py  pattern_matcher.py  session.py  state.py  utils.py
agent/prompts/: system_prompt.md
api/: deps.py  main.py  schemas.py
api/routes/: analytics.py  auth.py  budget.py  categories.py  chat.py  export.py  insights.py  payment_methods.py  transactions.py
core/: auth.py  database.py  models.py  shared_analytics.py  shared_budget.py  shared_txns.py  utils.py
frontend/: app.html  app.js  index.html  style.css
migrations/: migrate_json_to_sqlite.py
scripts/: reset_password.py
tools/: registry.py  tool_analytics.py  tool_budget.py  tool_schemas.py  tool_settings.py  tool_transactions.py
